--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,6 +5,9 @@ attrs==23.1.0
 bcrypt==4.0.1
 beautifulsoup4==4.12.2
 blinker==1.6.2
+boto==2.49.0
+boto3==1.34.11
+botocore==1.34.11
 cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
@@ -40,6 +43,7 @@ importlib-resources==6.0.1
 install==1.3.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 keras==2.14.0
@@ -83,6 +87,7 @@ requests-oauthlib==1.3.1
 rich==13.5.2
 rpds-py==0.10.3
 rsa==4.9
+s3transfer==0.10.0
 six==1.16.0
 smmap==5.0.0
 soupsieve==2.5
@@ -115,7 +120,7 @@ tornado==6.3.3
 typing_extensions==4.7.1
 tzdata==2023.3
 tzlocal==4.3.1
-urllib3==2.0.4
+urllib3==1.26.18
 validators==0.22.0
 watchdog==3.0.0
 Werkzeug==3.0.1
